# snips-common

./: .gitignore  README.md  setup.cfg
snips_common/: __init__.py  actions.py  configs.py  french.py  utils.py
