[metadata]
name = snips-common
description = "Common ground for all my Snips projects"
version = 0.0.1
author = Bors, Ltd
author_email = github@bors-ltd.fr
url = https://github.com/bors-ltd/snips-common
long_description = file: README.md
license = GPLv3
keywords = snips, ai, machine learning
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: French
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:

[options.packages.find]
exclude =
    tests
